@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Fix bug where build aliens were used
+    for test only build
 
 0.09      2018-08-28 10:50:27 -0400
   - Additional test diagnostics
